# patch_util

./: LICENSE  README.md  output.patch  patch_apply.sh  patch_make.sh
pip_exec/: .gitignore  README.md  build_c_app.sh
pip_exec/doc/: goal.md
pip_exec/python_wrapper/: README.md  build.py  pyproject.toml  setup.py  test.sh
pip_exec/python_wrapper/my_c_app_wrapper/: __main__.py  build_helpers.py
pip_exec/src/: CMakeLists.txt  main.c
tar_tui_py/: README.md  prompt.md  pyproject.toml  tar_tui.py  tar_tui_5.py
